Updates to personal statements and CV

--- a/texDocs/cv.tex
+++ b/texDocs/cv.tex
@@ -242,11 +242,11 @@ Graduated Summa cum laude as valedictorian of the College of Science, class of 2
     \item \textbf{Summer Math Boot Camp} \hfill (Calculus, Linear Algebra, Probability, Computing)
     \item \textbf{Stats 306}, {\it Lab Instructor} \hfill (Introduction to Statistical Computing)
 
-    \item Tutor for masters level courses in probability and regression
+    \item \textbf{Tutor}, {\it Master's level Rackham Merit Fellows} \hfill (Probability and Regression)
 \end{teachinglsit}
 
 \vspace{2mm}
-\noindent \textbf{SISMID (2022)}. Instructor for a short course on {\it Simulation based inference for Epidemiological Dynamics} at the Summer Institute in Statistics Modeling in Infectious Diseases (SISMID). University of Washington.
+\noindent \textbf{SISMID (2022)}. Instructor for a short course on {\it Simulation based inference for Epidemiological Dynamics} at the Summer Institute in Statistics Modeling in Infectious Diseases (SISMID). University of Washington, Seattle.
 
 \vspace{2mm}
 \noindent \textbf{Utah State University} \hfill  {\textit{2017--2020}}
@@ -277,7 +277,7 @@ Graduated Summa cum laude as valedictorian of the College of Science, class of 2
 
 \section*{Service}
 
-\noindent \textbf{Computing Club Committee Member}, UM Statistics Department \hfill  {\textit{2022--Present}}
+\noindent \textbf{Computing Club Committee Member}, UM Statistics Department \hfill  {\textit{2022--Present}}\\
 \noindent \textbf{Committee Chair} \hfill {\it 2023--Present}
 
 \vspace{2mm}
@@ -292,6 +292,9 @@ Graduated Summa cum laude as valedictorian of the College of Science, class of 2
 
 \vspace{2mm}
 \noindent Primary maintainer of the R package \textbf{panelPomp}, available on CRAN.
+
+\vspace{2mm}
+\noindent Core developer of the Python package \textbf{pypomp}, available on PyPI.
 
 \vspace{2mm}
 \noindent Contributor to open source R packages \textbf{pomp} and \textbf{spatPomp}, both available on CRAN.
