--- a/texDocs/otherWorks.bib
+++ b/texDocs/otherWorks.bib
@@ -10,7 +10,7 @@
 }
 
 @article{auger16,
-  title={State-space models’ dirty little secrets: even simple linear Gaussian models can have estimation problems},
+  title={State-space models’ dirty little secrets: even simple linear {G}aussian models can have estimation problems},
   author={Auger-M{\'e}th{\'e}, Marie and Field, Chris and Albertsen, Christoffer M and Derocher, Andrew E and Lewis, Mark A and Jonsen, Ian D and Mills Flemming, Joanna},
   journal={Scientific reports},
   volume={6},
@@ -18,6 +18,17 @@
   pages={26677},
   year={2016},
   publisher={Nature Publishing Group UK London}
+}
+
+@article{baker18,
+  title={Mechanistic models versus machine learning, a fight worth fighting for the biological community?},
+  author={Baker, Ruth E and Pena, Jose-Maria and Jayamohan, Jayaratnam and J{\'e}rusalem, Antoine},
+  journal={Biology letters},
+  volume={14},
+  number={5},
+  pages={20170660},
+  year={2018},
+  publisher={The Royal Society}
 }
 
 @incollection{bengtsson08,
@@ -52,9 +63,16 @@ URL = {https://doi.org/10.1214/08-AOAS201}
   publisher={Taylor \& Francis}
 }
 
+@article{breto24,
+  title={A tutorial on panel data analysis using partially observed {M}arkov processes via the {R} package panel{P}omp},
+  author={Breto, Carles and Wheeler, Jesse and King, Aaron A and Ionides, Edward L},
+  journal={arXiv preprint arXiv:2409.03876},
+  year={2024}
+}
+
 @article{cole13,
     author = {Cole, Stephen R. and Chu, Haitao and Greenland, Sander},
-    title = "{Maximum Likelihood, Profile Likelihood, and Penalized Likelihood: A Primer}",
+    title = {Maximum Likelihood, Profile Likelihood, and Penalized Likelihood: A Primer},
     journal = {American Journal of Epidemiology},
     volume = {179},
     number = {2},
@@ -68,6 +86,15 @@ URL = {https://doi.org/10.1214/08-AOAS201}
     eprint = {https://academic.oup.com/aje/article-pdf/179/2/252/287443/kwt245.pdf}
 }
 
+@article{dandekar20,
+  title={A machine learning-aided global diagnostic and comparative tool to assess effect of quarantine control in COVID-19 spread},
+  author={Dandekar, Raj and Rackauckas, Chris and Barbastathis, George},
+  journal={Patterns},
+  volume={1},
+  number={9},
+  year={2020},
+  publisher={Elsevier}
+}
 
 @book{durbin12,
   title={Time series analysis by state space methods},
@@ -78,7 +105,7 @@ URL = {https://doi.org/10.1214/08-AOAS201}
 }
 
 @article{gardner80,
-  title = {Algorithm {{AS}} 154: {{An Algorithm}} for {{Exact Maximum Likelihood Estimation}} of {{Autoregressive-Moving Average Models}} by {{Means}} of {{Kalman Filtering}}},
+  title = {Algorithm {{AS}} 154: An Algorithm for Exact Maximum Likelihood Estimation of Autoregressive-Moving Average Models by Means of {K}alman Filtering},
   shorttitle = {Algorithm {{AS}} 154},
   author = {Gardner, G. and Harvey, A. C. and Phillips, G. D. A.},
   year = {1980},
@@ -103,7 +130,7 @@ URL = {https://doi.org/10.1214/08-AOAS201}
 }
 
 @article{ionides15,
-  title={Inference for dynamic and latent variable models via iterated, perturbed Bayes maps},
+  title={Inference for dynamic and latent variable models via iterated, perturbed {B}ayes maps},
   author={Ionides, Edward L and Nguyen, Dao and Atchad{\'e}, Yves and Stoev, Stilian and King, Aaron A},
   journal={Proceedings of the National Academy of Sciences},
   volume={112},
@@ -113,9 +140,30 @@ URL = {https://doi.org/10.1214/08-AOAS201}
   publisher={National Acad Sciences}
 }
 
+@article{kim21,
+  title={Stiff neural ordinary differential equations},
+  author={Kim, Suyong and Ji, Weiqi and Deng, Sili and Ma, Yingbo and Rackauckas, Christopher},
+  journal={Chaos: An Interdisciplinary Journal of Nonlinear Science},
+  volume={31},
+  number={9},
+  year={2021},
+  publisher={AIP Publishing}
+}
+
+@article{king15,
+  title={Avoidable errors in the modelling of outbreaks of emerging pathogens, with special reference to Ebola},
+  author={King, Aaron A and Domenech de Cell{\`e}s, Matthieu and Magpantay, Felicia MG and Rohani, Pejman},
+  journal={Proceedings of the Royal Society B: Biological Sciences},
+  volume={282},
+  number={1806},
+  pages={20150347},
+  year={2015},
+  publisher={The Royal Society}
+}
+
 @article{lecam90,
-  title = {Maximum {{Likelihood}}: {{An Introduction}}},
-  shorttitle = {Maximum {{Likelihood}}},
+  title = {Maximum Likelihood: An Introduction},
+  shorttitle = {Maximum Likelihood},
   author = {Le Cam, L.},
   year = {1990},
   journal = {International Statistical Review / Revue Internationale de Statistique},
@@ -151,6 +199,15 @@ URL = {https://doi.org/10.1214/08-AOAS201}
   publisher={Wiley Online Library}
 }
 
+@misc{ripley2002,
+  title = {Time Series in {{R}} 1.5.0. {{R News}}, 2/2, 2--7},
+  author = {Ripley, Brian},
+  year = {2002},
+  month = jun,
+  howpublished = {https://www.r-project.org/doc/Rnews/Rnews\_2002-2.pdf},
+  file = {/Users/jeswheel/Zotero/storage/LYB6FAXJ/Rnews_2002-2.pdf}
+}
+
 @article{snyder08,
   title={Obstacles to high-dimensional particle filtering},
   author={Snyder, Chris and Bengtsson, Thomas and Bickel, Peter and Anderson, Jeff},
@@ -169,8 +226,15 @@ URL = {https://doi.org/10.1214/08-AOAS201}
   year={2024}
 }
 
+@article{tan24,
+  title={Accelerated Inference for Partially Observed {M}arkov Processes using Automatic Differentiation},
+  author={Tan, Kevin and Hooker, Giles and Ionides, Edward L},
+  journal={arXiv preprint arXiv:2407.03085},
+  year={2024}
+}
+
 @article{yang23,
-  title={Analysis of Panel Data via Mechanistic Models in a PanelPOMP Framework},
+  title={Analysis of Panel Data via Mechanistic Models in a Panel{P}OMP Framework},
   author={Bo Yang},
     journal={University of Michigan, Undergraduate Honors Thesis},
   year={2023}
