--- a/texDocs/researchStatement.tex
+++ b/texDocs/researchStatement.tex
@@ -1,6 +1,8 @@
 \documentclass{article}
 \usepackage{graphicx} % Required for inserting images
 \usepackage{geometry}
+\usepackage{url}
+\usepackage{hyperref}
 
 \title{Research Statement}
 \author{Jesse Wheeler}
@@ -25,7 +27,7 @@
 \vspace{4mm}
 
 % \noindent Dynamic systems are the subject of many ecological and financial studies.
-\noindent Recent advancements in data collection and storage have led to an abundance of complex datasets.
+\noindent Recent advances in data collection and storage have led to an abundance of complex datasets.
 Often, these datasets include time-dependent measurements, resulting in interdependent observations that render many traditional statistical modeling approaches ineffective.
 This issue is particularly prevalent in nonlinear dynamic systems that are frequently of scientific or industrial interest.
 
@@ -41,9 +43,9 @@ Algorithms with the plug-and-play property enable researchers to fit models that
 
 Applying state-space models to data requires close collaboration with experts from pertinent scientific disciplines.
 For example, conducting a statistical analysis of an infectious disease outbreak relies heavily on expert opinion regarding the specific disease \cite{wheeler24}.
-A pertinent example from my ongoing projects is the investigation of population dynamics in freshwater Daphnia species.
-In this endeavor, I closely collaborate with colleagues in the Ecology department, leveraging their knowledge of Daphnia.
-This collaboration has honed my skills as an effective statistical consultant in ecological research projects, a competency I look forward to further refine through future research collaborations.
+A pertinent example from my ongoing projects is the investigation of population dynamics in freshwater \emph{Daphnia} species.
+In this endeavor, I closely collaborate with colleagues in the Ecology and Evolutionary Biology department, leveraging their knowledge of \emph{Daphnia}.
+This collaboration has honed my skills as an effective statistical collaborator in ecological research projects, a competency I look forward to further refine through future research collaborations.
 
 % An important outcome of this line of research is
 % State-space models are particularly useful in studying population Ecology.
@@ -60,20 +62,22 @@ Furthermore, existing plug-and-play algorithms used to model these systems are c
 
 A simplifying assumption that can often be made for high-dimensional, nonlinear dynamic systems is approximate independence between measurement units.
 Data collected from these systems are sometimes called panel or longitudinal data.
+Examples of this type include controlled ecological experiments, or systems where we are interested in modeling within-host dynamics.
 Each time-series in the panel may be relatively short, so that inference on an underlying model must combine information across the units.
 Differences between units may be of direct inferential interest or may be a nuisance for studying the commonalities.
 One example includes fitting parameters that are both shared across units in the panel and also those that are specific to each unit.
 Current state-of-the-art plug-and-play algorithms available for fitting models of this type of model treat panel state-space models similar to their lower-dimensional equivalents \cite{breto20}, and can therefore still suffer from particle depletion \cite{snyder08}, resulting in the need for expensive numerical calculations.
 
 One of my current research projects aims to reduce the computational burden associated with fitting state-space models to panel data.
-An algorithm I have designed, called the block panel iterated filter (BPIF), does this by accounting for the independence between the likelihood of a given unit in a panel and the unit-specific parameters of other units.
+An algorithm I have designed, called the marginalized panel iterated filter (MPIF), does this by accounting for the independence between the likelihood of a given unit in a panel and the unit-specific parameters of other units.
 While the theory for this algorithm is still being developed, it has demonstrated to be an improvement over existing approaches on simulated data and on examples that have been attempted by undergraduate students I have mentored \cite{yang23,sun24}.
 
 A weakness of maximum likelihood estimation is that estimated parameters may not make sense in the context of the model and data in question \cite{lecam90}.
 For mechanistic models, this is particularly troublesome because estimated parameters should provide a quantitative description of the data while retaining a meaningful mechanistic interpretation \cite{wheeler24}.
-In high dimensional systems, the chance of finding parameters that maximize the likelihood in implausible regions of the parameter space increases \cite{li24}.
+In high dimensional systems, the chance of finding parameters that maximize the likelihood in implausible regions of the parameter space increases.
 For this reason I plan on extending existing iterated filtering algorithms \cite{ionides15,ionides22} to enable the maximization of penalized likelihood \cite{cole13}, which helps address issues of parameter instability that arise in likelihood maximization.
 Additionally, penalized likelihood may enable the estimation of random effects in high-dimensional state-space models, an open research question.
+This work may be facilitated by recent methodological advances in automatic differentiation by some of my collaborators \cite{tan24} and software projects which I am involved in (\url{https://github.com/pypomp}).
 
 % Finally, recent advancements in automatically differentiable particle filters (ADPF) by a student that I mentored as an undergraduate student and my research advisory shows promise as an computational improvement over existing methods on low-dimensional systems.
 % \section{State-space modeling of infectious diseases}\label{sec:epi}
@@ -83,41 +87,54 @@ Additionally, penalized likelihood may enable the estimation of random effects i
 % The methodological, theoretical, and computing developments mentioned in Sections \ref{sec:methods} and \ref{sec:software} provide epidemiologists with a new set of tools for modeling infectious disease outbreaks.
 % In \cite{wheeler24}, I provide practical advice on how to use these tools and avoid common mistakes that are made in infectious disease modeling.
 
-\section{Additional Research}
+\section{Revisiting inference for ARMA models}
 
-State-space models have additional uses beyond the class of mechanistic models that are popular in Ecology.
+State-space models have additional uses beyond the class of mechanistic models that are popular for modeling dynamic systems.
 Likelihood maximization for auto regressive moving average (ARMA) models, for instance, is traditionally done by reparameterizing the model into an equivalent linear Gaussian state-space form \cite{gardner80, durbin12}.
-% In this case, the state-space model is a convenient approach to fitting a model rather than being of direct interest itself.
-Despite the wide use of ARMA models across various scientific disciplines, current algorithms for maximum likelihood estimation of ARMA models have weaknesses that are not well known.
-In one of my working papers, I demonstrate how existing optimization strategies for ARMA models often result in parameter estimates corresponding to local---rather than global---maximum of the likelihood surface.
-To rectify this, I propose a random restart algorithm that frequently results in higher likelihoods than standard alternatives \cite{wheelerARMA}.
+In this case, the state-space model serves primarily as a computational tool rather than being of direct interest itself.
 
-While my current research is focused on state-space modeling of dynamic systems, I am interested in many other statistical topics and am open to new research topics and collaborations.
-Some themes common to each of my research interests are transparency and reproducibility.
-I believe that many of the challenges faced by various scientific disciplines are a direct result of the poor practice of these principles.
-I also believe that statisticians must play a more active role in promoting and executing these principles.
-As such, one of my primary research goals is to positively impact the scientific community by writing papers and developing software that encourage and enable other researchers to incorporate these principles in their own work.
+Despite the widespread use of ARMA models across various scientific disciplines, existing algorithms for maximum likelihood estimation of ARMA models possess under-recognized weaknesses.
+In one of my working papers, I demonstrate how existing optimization strategies for ARMA models often result in parameter estimates corresponding to local---rather than global---maximum of the likelihood surface \cite{wheelerARMA}.
+
+In other optimization contexts, the issue of converging to a local solution is addressed through multiple runs of the algorithm with different starting values.
+However, this approach is not readily applicable to ARMA models due to the intricate geometry of their likelihood surfaces \cite{ripley2002}.
+To rectify this, I propose a random restart algorithm that accounts for the geometry of the likelihood surface and can frequently result in higher likelihoods than current standards \cite{wheelerARMA}.
+
+\section{Scientific applications}
+
+I am also interested in a variety of applications.
+Currently, most of my applied research has been in the modeling of infectious diseases, though I am interested in developing collaborations in other scientific disciplines.
+In future work, I plan to apply recent advancements in automatically differentiable particle filters \cite{tan24} to investigate how machine learning tools can enhance mechanistic models for nonlinear dynamic systems.
+One example is examining how changes in human behavior may affect disease dynamics.
+Although similar ideas have been explored recently \cite{dandekar20,kim21}, these approaches involve fitting an ODE model to cummulative case counts using summary statistics, an approach that has elsewhere been found to be problematic \cite{king15}.
+The \texttt{pypomp} sofware project, currently under development (\url{https://github.com/pypomp}), may enable fitting scientificly motivated machine learning models via maximum likelihood.
+This could lean to novel insights into an infectious disease system.
+Similarly, this approach has the potential to yield new understanding in other nonlinear dynamic systems by incorporating the scientific benefits of mechanistic models \cite{baker18} with the statistical efficiency of likelihood-based inference and the flexibility of neural networks.
 
 \section{Software}\label{sec:software}
 
-The development of theory and methods for likelihood based inference of state-space models requires development of new software.
-This section briefly describes some of the open-source software packages to which I have contributed.
+While my current research is focused on state-space modeling of dynamic systems, I am also interested in a wide array of statistical topics and open to new research directions and collaborations.
+Central to all my research interests are the principles of transparency and reproducibility, which I believe are critical to addressing many challenges faced by various scientific disciplines today.
+
+Statisticians must take a proactive role in promoting and implementing these principles.
+Consequently, one of my primary research goals is to positively impact the scientific community by writing papers and developing software that facilitate the adoption of transparency and reproducibility.
+This commitment has guided me in the development of open-source software related to statistical modeling and inference.
+This section briefly describes some of the software development projects that I am currently involved with.
 
 \begin{itemize}
+
+      \item \texttt{arima2}: This package provides useful functions for fitting auto-regressive, integrated, moving-average (ARIMA) models in \texttt{R}. The most important function of this package is the \texttt{arima} function, which fits ARIMA models using a multiple restart algorithm that frequently results in models with higher likelihoods than other alternatives \cite{wheelerARMA}.
+    I am the creator and primary contributor of this package, which is publicly available on both CRAN and GitHub.
+
     \item \texttt{panelPomp}: This package provides a framework for developing high-dimensional state-space models under the assumption of independence between panel units.
     This package is publicly available on both CRAN and GitHub.
-    While I was not the original creator of the package, I am currently the primary package maintainer and developer.
+    After joining the development team for panelPomp in May, 2023, I became the most active contributor and am now the package maintainer.
+    Together with collaborators, I wrote a tutorial demonstrating a typical use case of this package that is available on ArXiv \cite{breto24}.
 
-    \item \texttt{arima2}: This package provides useful functions for fitting auto-regressive, integrated, moving-average (ARIMA) models in \texttt{R}. The most important function of this package is the \texttt{arima} function, which fits ARIMA models using a multiple restart algorithm that frequently results in models with higher likelihoods than other alternatives \cite{wheelerARMA}.
-    I am the creator and primary contributor of this package, which is publicly available on both CRAN and GitHub.
+    \item \texttt{pypomp}: This is a new Python project with the goal of providing a framework for developing arbitrary POMP models in Python. The code currently focuses on supporting the automatic differentiation methodology explored by Tan, K., Ionides, E. L. and Hooker, G. \cite{tan24}. I am one of the core developers on this project.
 
     \item \texttt{pomp} and \texttt{spatPomp}: These are both popular packages that enable inference for mechanistic models. The \texttt{pomp} package in particular is used by thousands of researchers across a variety of disciplines. I am an active contributor to both of these open source projects.
 
-    % \item \texttt{spatPomp}: This package provides a framework for developing spatiotemporal partially observed Markov process (SpatPOMP) models for data analysis. An implementation of the method described in \cite{ionides22} is found in this package.
-    % My contributions to this package include the implementation of new package features, as well as some bug fixes.
-
-    % \item \texttt{pomp}: This widely used package provides a framework for developing partially observed Markov process (POMP) models; the \texttt{spatPomp} package described previously is an extension of this package.
-    % My contributions to this package are bug fixes.
 \end{itemize}
 
 \bibliography{myWorks.bib,otherWorks.bib}
