--- a/texDocs/DEIstatement.tex
+++ b/texDocs/DEIstatement.tex
@@ -40,30 +40,36 @@ This aspiration is driven both by a desire to be equitable and inclusive of all 
 Without diversity of thoughts, opinions, and backgrounds, higher education would be destined to fail its purpose of advancing scientific discovery.
 
 The primary reason I have chosen to pursue a career in academia is my strong desire to positively influence society.
-However, I am aware that my contributions in academia--whether through research, teaching, or service--will only have a truly beneficial impact if they are inclusive and considerate of all groups within our society.
-As such, I am committed to fostering an inclusive and diverse environment in each of my teaching, mentoring, and research roles.
+However, I am aware that my contributions in academia---whether through research, teaching, or service---will only have a truly beneficial impact if they are inclusive and considerate of all groups within our society.
+As such, I am committed to fostering an inclusive and diverse environment in each of my teaching, research, and service roles.
 
-As an educator, I am committed to cultivating a classroom environment where all students---regardless of their background, race, gender identity, or abilities---feel safe, welcomed, and capable of learning.
-I believe that fostering inclusivity begins with understanding each student on a personal level and being flexible in my teaching approach.
-By recognizing the diverse strengths and backgrounds of my students and adapting my teaching methods accordingly, I can effectively deliver course material to benefit the greatest number of students.
-Because it may be challenging to accommodate all learning styles simultaneously, I strive to provide supplementary learning materials that present course material from alternative perspectives than my own.
-Moreover, I encourage students to take advantage of office hours for discussions in a non-judgmental setting.
-Additionally, I acknowledge that traditional assessment methods may not be effective for everyone.
-Therefore, I am open to exploring innovative approaches to evaluate student understanding and am committed to offering additional resources when necessary.
+% Fostering inclusivity begins with understanding each student on a personal level and being flexible in my teaching approach.
+% By recognizing the diverse strengths and backgrounds of my students and adapting my teaching methods accordingly, I can effectively deliver course material to benefit the greatest number of students.
+% Because it may be challenging to accommodate all learning styles simultaneously, I strive to provide supplementary learning materials that present course material from alternative perspectives than my own.
+% Moreover, I encourage students to take advantage of office hours for discussions in a non-judgmental setting.
+% Additionally, I acknowledge that traditional assessment methods may not be effective for everyone.
+% Therefore, I am open to exploring innovative approaches to evaluate student understanding and am committed to offering additional resources when necessary.
 
-My approach to mentoring students, much like my approach to teaching, recognizes that each student’s needs and preferences are unique.
+As an educator, I am committed to cultivating a classroom environment where all students feel safe, welcomed, and capable of learning.
+A key to achieving this is becoming an effective mentor.
 To develop a mutually beneficial mentor-mentee relationship, I prioritize getting to know students personally and adapting my mentoring approach to fit their individual needs.
-During my time as a PhD student, I have had the opportunity to mentor undergraduate and master's students on their research projects.
-Through this experience, I have learned the importance of listening carefully to the questions and concerns of those I mentor in order to address their specific needs.
-Listening carefully to both verbal and nonverbal communication enables me to to create an inclusive mentoring environment where students from diverse backgrounds feel valued and supported.
-% I strive to be approachable and sensitive to the unique challenges that students from underrepresented groups may face, and I actively seek out resources and strategies to support them.
-By fostering open communication and showing a genuine interest in my mentees' personal and academic development, I aim to empower them to achieve their full potential.
+In a classroom setting, this type of relationship can be developed by encouraging students to take advantage of office hours and providing a safe space to discuss topics related to student success and well-being.
+My hands-on experience as a graduate student instructor in a lab section allowed me to create an environment where students felt comfortable reaching out for help, knowing that I would approach their situations without judgment.
+Helping students feel seen and heard empowers them to set and attain personal and academic goals.
 
-I further intend to prioritize diversity, equity, and inclusion in my research.
-As previously stated, I am aware that diversity of thought and opinion are important drivers of scientific innovation, and therefore I am commited to seeking out collaborations that can provide perspectives that are distinct from my own.
-As a researcher who works in an area with potential applications to public health, I recognize the importance of considering how my work may impact marginalized groups within our societies.
-One of my particular application areas is the modeling of infectious diseases.
-I believe that our efforts in this field can contribute to more equitable health solutions and policies, fostering a broader impact that extends beyond academia to positively affect diverse communities around the world.
+My approach to mentoring, particularly towards underrepresented groups, has been shaped by various experiences I have had as a PhD student.
+One relevant example is my involvement as a tutor to master's level students in the Rackham Merit Fellowship program, which supports diversity and inclusivity in graduate studies at the University of Michigan.
+Additionally, I have had the opportunity to mentor undergraduate and master's students from diverse backgrounds on their research projects.
+Through these experiences, I have learned the importance of attentive listening to address the specific needs of those I mentor.
+This includes paying attention to both verbal and nonverbal communication, which enables me to create an inclusive mentoring environment where students feel valued and supported.
+
+I further intend to prioritize diversity, equity, and inclusion in my own research.
+Recognizing the importance of diversity of thought in scientific research, I actively seek out collaborations that offer perspectives distinct from my own.
+One of my primary application areas is the modeling of infectious diseases.
+Working in an area with potential applications to public health, I understand the importance of considering how my research may impact marginalized groups within our society.
+I believe that our efforts in this field have the potential to contribute to more equitable health solutions and policies, creating a positive impact that extends beyond academia and benefits diverse communities around the world.
+To achieve this, I am commited to engage in open discussions with stakeholders to understand how scientific recommendations based on research findings may affect their communities.
+
 
 % I am committed to using and building upon open-source tools to ensure that my research findings and methodologies are accessible to everyone, not just those with access to proprietary software.
 % By making my work open-source, I aim to democratize research and empower a broader community of scientists, public health officials, and policymakers to engage with and benefit from my findings.
@@ -79,7 +85,7 @@ I believe that our efforts in this field can contribute to more equitable health
 I acknowledge that I do not fully understand all of the challenges that members of underrepresented groups face within and outside of academia.
 Therefore, I am dedicated to continuous learning and growth in order to become a more effective ally and advocate for these communities.
 As part of my commitment to fostering an inclusive and diverse academic environment, I am currently enrolled in the University of Michigan's Professional Development in Diversity, Equity, and Inclusion Certificate program, which I will complete by December 2024.
-I am confident that this program will profoundly enhance my ability to promote diversity, equity, and inclusion in all aspects of my teaching, mentoring, and research.
+I am confident that this program will profoundly enhance my ability to promote diversity, equity, and inclusion in all aspects of my career.
 By equipping myself with the necessary knowledge and skills, I aspire to make a lasting, positive impact on the academic community and beyond.
 
 
