--- a/texDocs/myWorks.bib
+++ b/texDocs/myWorks.bib
@@ -1,7 +1,7 @@
 @preamble{ " \newcommand{\noop}[1]{} " }
 
 @article{wheeler24,
-  title = {Informing policy via dynamic models: Cholera in Haiti},
+  title = {Informing policy via dynamic models: Cholera in {H}aiti},
   author = {Wheeler, Jesse and Rosengart, AnnaElaine and Jiang, Zhuoxun and Tan, Kevin and Treutle, Noah and Ionides, Edward L},
   journal = {PLOS Computational Biology},
   volume = {20},
