--- a/index.qmd
+++ b/index.qmd
@@ -19,6 +19,8 @@ My application area has been modeling infectious disease outbreaks, but I am als
 
 My thesis advisor is [Edward Ionides](https://ionides.github.io/).
 
+[USU Stat 5100 Lecture Material](Stat5100.Rmd)
+
 ---
 
 ## Education
