--- a/texDocs/cv.tex
+++ b/texDocs/cv.tex
@@ -105,7 +105,7 @@
 
 %\begin{center}
 %\hfill
-\rule{0mm}{1mm}\hspace{5cm}{\large {\bf JESSE WHEELER}}
+\rule{0mm}{1mm}\hspace{6cm}{\large {\bf JESSE WHEELER}}
 %\hfill
 %\end{center}
 %\vspace{1mm}
@@ -113,7 +113,7 @@
 %\vspace{1mm}
 
 \begin{tabbing}
-University of Michiganxxxxxxxxxxxxxxxxxxxxxxxxxx\= \kill
+University of Michiganxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\= \kill
 Department of Statistics \>  % phone: (734) 615-3332
 {\url{https://jeswheel.github.io/}}
 \\
@@ -135,7 +135,7 @@ Thesis Advisor: Edward Ionides
 
 Utah State University (USU), Logan, UT.
 
-Graduated Summa cum laude as valedictorian of the College of Science, class of 2020
+Graduated as valedictorian of the College of Science, class of 2020
 
 \section*{Research}
 \subsection*{Interests}
@@ -152,9 +152,11 @@ Graduated Summa cum laude as valedictorian of the College of Science, class of 2
 
 \begin{reflist}
 
-    \item Wheeler, J., Ionides, E. (2024). Likelihood Based Inference for ARMA models. {\it arXiv:2310.01198}.
+    \item Wheeler, J., Ionides, E. (2024). Likelihood Based Inference for ARMA models. {\it arXiv:2310.01198}. In review at the Journal of Computational and Graphical Statistics.
 
-    % \item Yang, B., Wheeler, J., King, A., Duffy, M., Ionides, E. (2024) Mechanistic Models for Panel Data: Analysis of Ecological Experiments with Four Interacting Species.
+    \item Bret\'o, C., Wheeler, J., King, A., Ionides, E. L. (2024). panelPomp: Analysis of Panel Data via Partially Observed Markov Processes in R. In review at the Journal of Machine Learning Research: Machine Learning Open Source Software.
+
+    \item Yang, B., Wheeler, J., King, A., Duffy, M., Ionides, E. L. (2024). Mechanistic Models for Panel Data: Analysis of Ecological Experiments with Four Interacting Species. {\it In preparation}.
 
 \end{reflist}
 
@@ -162,17 +164,25 @@ Graduated Summa cum laude as valedictorian of the College of Science, class of 2
 
 \begin{reflist}
 
-    \item Wheeler, J., Rosengart, A., Jiang, Z., Tan, K., Truetle, N., Ionides, E. (2024) Informing policy via dynamic models: Cholera in Haiti. {PLOS Computational Biology}, 20(4), e1012032.
+    \item Wheeler, J., Rosengart, A., Jiang, Z., Tan, K., Truetle, N., Ionides, E. (2024). Informing policy via dynamic models: Cholera in Haiti. {PLOS Computational Biology}, 20(4), e1012032. \\ doi:10.1371/journal.pcbi.1012032
 
-    \item Wagstaff, J., Bean, B., Wheeler, J., Maguire, M., Sun, Y. (2024) Adaptive Mapping of Design Ground Snow Loads in the Conterminous United States. {\it Journal of Structural Engineering}.
+    \item Wagstaff, J., Bean, B., Wheeler, J., Maguire, M., Sun, Y. (2024). Adaptive Mapping of Design Ground Snow Loads in the Conterminous United States. {\it Journal of Structural Engineering}, 150(1), 04023193. doi:10.1061/JSENDH.STENG-12396
 
-    \item Ionides, E. L., Ning, N. and Wheeler, J. (2022). An iterated block particle filter for inference on coupled dynamic systems with shared and unit-specific parameters. {\it Statistica Sinica}, preprint online.
+    \item Ionides, E. L., Ning, N. and Wheeler, J. (2024). An iterated block particle filter for inference on coupled dynamic systems with shared and unit-specific parameters. {\it Statistica Sinica}, 34, 1241-1262. doi:10.5705/ss.202022.0188.
 
     \item Wheeler, J., Bean, B., Maguire, M. (2022). Creating a Universal Depth-to-Load Conversion Technique for the Conterminous United States Using Random Forests. {\it Journal of Cold Regions Engineering, 36(1), 04021019}. doi:10.1061/(ASCE)CR.1943-5495.0000270
 
-    \item Bean, B., Maguire, M., Sun, Y., Wagstaff, J., Al-Rubaye, S., Wheeler, J., Jarman, S., Rogers, M. (2021). The 2020 National Snow Load Study. {\it Utah State University}.
-
     \item White, T., Wheeler, J., Lindstrom, C., Christensen, R., Moon, K. (2021). GPS-Denied Navigation Using SAR Images and Neural Networks. {\it ICASSP 2021 - 2021 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)}. Toronto, ON, Canada, 2021, pp. 2395-2399, doi:10.1109/ICASSP39728.2021.9414421.
+
+\end{reflist}
+
+\subsection*{Non-Refereed Publications}
+
+\begin{reflist}
+
+    \item Bean, B., Maguire, M., Sun, Y., Wagstaff, J., Al-Rubaye, S., Wheeler, J., Jarman, S., Rogers, M. (2021). The 2020 National Snow Load Study. {\it Utah State University}. doi:10.26077/200k-pr86.
+
+    \item Ionides, E. L., Wheeler, J. (2024). Review 2: ``Efficacy, Public Health Impact and Optimal Use of the Takeda Dengue Vaccine." Rapid Reviews Infectious Diseases. doi:10.1162/2e3983f5.1f0cb1f4.
 
 \end{reflist}
 
@@ -258,7 +268,7 @@ Graduated Summa cum laude as valedictorian of the College of Science, class of 2
     \item Stats 1040, {\it Recitation Leader}, (Introductory Statistics, non-Calculus based)
 \end{teachinglsit}
 
-\noindent \textbf{Undergraduate Honors Thesis and Projects Mentored}
+\noindent \textbf{Undergraduate Research Projects Mentored}
 
 \begin{reflist}
 
@@ -281,14 +291,14 @@ Graduated Summa cum laude as valedictorian of the College of Science, class of 2
 \noindent \textbf{Committee Chair} \hfill {\it 2023--Present}
 
 \vspace{2mm}
-\noindent \textbf{Peer Reviews}: PLoS computation biology, Nature Communications
+\noindent \textbf{Peer Reviews}: PLOS Computation Biology, Nature Communications, Rapid Reviews Infectious Diseases
 
 \vspace{2mm}
 \noindent \textbf{President, USU Data Science Club} \hfill  {\textit{2019--2020}}
 
 \section*{Software}
 
-\noindent Author and maintainer for the R package \textbf{arima2}, available on CRAN.
+\noindent Author and maintainer for the R package \textbf{arima2}, available on CRAN. As of October 1, 2024, this package has been downloaded more times than $79.7\%$ of all packages on CRAN since it was first published (October 5, 2023).
 
 \vspace{2mm}
 \noindent Primary maintainer of the R package \textbf{panelPomp}, available on CRAN.
