--- a/texDocs/otherWorks.bib
+++ b/texDocs/otherWorks.bib
@@ -1,5 +1,5 @@
 @article{andrieu10,
-  title={Particle markov chain monte carlo methods},
+  title={Particle {M}arkov chain {M}onte {C}arlo methods},
   author={Andrieu, Christophe and Doucet, Arnaud and Holenstein, Roman},
   journal={Journal of the Royal Statistical Society Series B: Statistical Methodology},
   volume={72},
@@ -87,7 +87,7 @@ URL = {https://doi.org/10.1214/08-AOAS201}
 }
 
 @article{dandekar20,
-  title={A machine learning-aided global diagnostic and comparative tool to assess effect of quarantine control in COVID-19 spread},
+  title={A machine learning-aided global diagnostic and comparative tool to assess effect of quarantine control in {COVID}-19 spread},
   author={Dandekar, Raj and Rackauckas, Chris and Barbastathis, George},
   journal={Patterns},
   volume={1},
