--- a/texDocs/cv.tex
+++ b/texDocs/cv.tex
@@ -154,7 +154,7 @@ Graduated as valedictorian of the College of Science, class of 2020
 
     \item Wheeler, J., Ionides, E. (2024). Likelihood Based Inference for ARMA models. {\it arXiv:2310.01198}. In review at the Journal of Computational and Graphical Statistics.
 
-    \item Bret\'o, C., Wheeler, J., King, A., Ionides, E. L. (2024). panelPomp: Analysis of Panel Data via Partially Observed Markov Processes in R. In review at the Journal of Machine Learning Research: Machine Learning Open Source Software.
+    \item Bret\'o, C., Wheeler, J., King, A., Ionides, E. L. (2024). panelPomp: Analysis of Panel Data via Partially Observed Markov Processes in R. {\it arXiv:2410.07934}. In review at the Journal of Machine Learning Research: Machine Learning Open Source Software.
 
     \item Yang, B., Wheeler, J., King, A., Duffy, M., Ionides, E. L. (2024). Mechanistic Models for Panel Data: Analysis of Ecological Experiments with Four Interacting Species. {\it In preparation}.
 
