--- a/texDocs/teachingStatement.tex
+++ b/texDocs/teachingStatement.tex
@@ -31,21 +31,24 @@
 
 \noindent Throughout my academic career I have seen many differing approaches to teaching, from both the perspective of a student and from the perspective of an instructor.
 These experiences have all shaped my teaching philosophy in differing ways, yet all have reaffirmed the importance of the teaching duty of an academic.
-Effective instructors have the potential to completely transform a students life for the better, as several professors did for me when I was a student.
+Effective instructors have the potential to completely transform a student's life for the better, as several professors did for me when I was a student.
 As such, developing skills of an effective instructor is a responsibility I take very seriously.
 
 Recognizing that each student brings a unique background and experiences to the classroom, I strive to present material in various ways to accommodate different learning styles and cultural perspectives.
 Adaptability in teaching is crucial; what works well for one student may not resonate with another.
 Therefore, I employ multiple teaching strategies and actively seek feedback to ensure effective engagement with the material for all students.
-I have seen firsthand how adapting future lessons based on frequent assessments—such as homework, quizzes, and tests—can enhance learning outcomes.
-For instance, revisiting challenging topics if necessary ensures a solid understanding of the current material that can be crucial for understanding future topics.
-By encouraging open dialogue and questions, I create an inclusive learning environment that enriches the educational experience for everyone.
-By prioritizing equity and fostering a sense of belonging, I aim to support the success of every student, regardless of their background.
+I have seen firsthand how adapting future lessons based on frequent assessments of student comprehension--—such as homework, quizzes, and tests--—can enhance learning outcomes.
 
 Effective teaching extends far beyond presenting raw material to students.
 As an educator, I believe that students learn most effectively when they can connect theoretical ideas to real-world problems.
 An effective way to do this is to find recent published articles that are related to course topics to use as motivating examples or discussion points.
 By presenting historic backgrounds and the motivations behind certain concepts, I can enrich students' learning experiences and help them grasp the broader significance of the subject matter.
+
+Statistical methodology and theory can often appear abstract and challenging, especially for students whose primary discipline is not statistics.
+Example-based learning can make abstract concepts more relatable.
+For instance, I use specific datasets to illustrate the relevance and application of the topics I teach, demonstrating both the necessity of particular theories or methodologies and their practical use.
+Student-led projects further bridge the gap between theory and practice; well-designed projects and assignments encourage students to engage with the material in a more meaningful way, promoting critical thinking and practical application of course concepts.
+Through project-based learning, students can delve deeper into subjects, collaborate with peers, and develop essential skills for their future careers.
 
 In my teaching experience, I have observed that well-crafted homework assignments significantly enhance learning outcomes without causing undue stress.
 For instance, I taught a lab course for the same undergraduate statistics class over two semesters, each under the supervision of different faculty members.
@@ -54,16 +57,16 @@ In contrast, the other instructor designed guided homework assignments that intr
 The students who received thoughtfully crafted assignments experienced less stress throughout the semester and demonstrated a deeper understanding of the course materials by its end.
 This comparison has reinforced my belief in the importance of designing assignments that both challenge and support students, fostering an engaging and productive learning environment.
 
-Statistical methodology and theory can often appear abstract and challenging, especially for students whose primary discipline is not statistics.
-Example-based learning can make abstract concepts more relatable.
-For instance, I use specific datasets to illustrate the relevance and application of the topics I teach, demonstrating both the necessity of particular theories or methodologies and their practical use.
-Student-led projects further bridge the gap between theory and practice; well-designed projects and assignments encourage students to engage with the material in a more meaningful way, promoting critical thinking and practical application of course concepts.
-Through project-based learning, students can delve deeper into subjects, collaborate with peers, and develop essential skills for their future careers.
+My willingness to adapt my teaching approach extends to embracing and integrating new teaching methods and technologies.
+One such example is my utilization of the R package \texttt{learnr}.
+I have incorporated this tool into the labs of an undergraduate course on statistical computing at the University of Michigan.
+\texttt{learnr} converts any R Markdown file into an interactive tutorial, fostering a learning environment that encourages individual exploration of course topics.
+This method allows students to engage deeply with the material, with the added benefit of receiving targeted hints and support from the instructor when needed.
 
-The advent of generative AI, such as ChatGPT, presents both opportunities and challenges in teaching statistics.
-These tools are revolutionizing how students work and learn, necessitating adaptation by effective instructors.
-Rather than disregarding advancements in AI, it is important to teach students how to use these tools responsibly and effectively in both research and learning contexts.
-For example, in the Stats 531 course I instructed at the University of Michigan, students were allowed to use ChatGPT provided that they could demonstrate their engagement beyond simply copying answers.
+Generative AI is another emerging technology that offers both opportunities and challenges in teaching statistics.
+These tools are transforming how students engage with and understand complex concepts, thereby requiring instructors to adapt accordingly.
+Rather than treating AI as a hinderance to education, it is important to teach students how to use these tools responsibly and effectively in both research and learning contexts.
+In the master's level time series analysis course I instructed at the University of Michigan, students were allowed to use ChatGPT provided that they could demonstrate their engagement beyond simply copying answers.
 They were required to explain their learning process and how they applied their knowledge, thereby encouraging active and thoughtful interaction with the material.
 While AI tools can be beneficial, it is crucial for educators to evolve their teaching methods so that students can leverage new technology to enhance their learning experience rather than be hindered by it.
 % to prevent students from relying solely on AI-generated answers.
