--- a/texDocs/cv.tex
+++ b/texDocs/cv.tex
@@ -251,8 +251,9 @@ Graduated as valedictorian of the College of Science, class of 2020
     \item \textbf{Stats 604}, {\it Lab Instructor} \hfill (Statistical Practice)
     \item \textbf{Summer Math Boot Camp} \hfill (Calculus, Linear Algebra, Probability, Computing)
     \item \textbf{Stats 306}, {\it Lab Instructor} \hfill (Introduction to Statistical Computing)
-
+    \item \textbf{Workshop} {\it Developing a personal academic website} \hfill (Student Seminar Series)
     \item \textbf{Tutor}, {\it Master's level Rackham Merit Fellows} \hfill (Probability and Regression)
+
 \end{teachinglsit}
 
 \vspace{2mm}
