--- a/texDocs/teachingStatement.tex
+++ b/texDocs/teachingStatement.tex
@@ -1,6 +1,8 @@
 \documentclass{article}
 \usepackage{graphicx} % Required for inserting images
 \usepackage{geometry}
+\usepackage{url}
+\usepackage{hyperref}
 \usepackage[table]{xcolor}
 \newcommand\TODO[1]{\textcolor{red}{[TODO: #1]}}
 
@@ -71,8 +73,12 @@ They were required to explain their learning process and how they applied their 
 While AI tools can be beneficial, it is crucial for educators to evolve their teaching methods so that students can leverage new technology to enhance their learning experience rather than be hindered by it.
 % to prevent students from relying solely on AI-generated answers.
 
-In conclusion, my teaching philosophy revolves around creating a dynamic and inclusive learning environment that caters to the diverse needs of students.
-Through the integration of real-world examples, adaptive teaching methods, thoughtfully designed assignments, project-based learning, and the judicious use of generative AI, I aim to foster a deep and meaningful understanding of statistics among all my students.
+I have a wide range of teaching interests supported by my interest in learning a wide variety of statistical topics.
+My primary interests include courses closely related to my teaching experience and research interests, including: time series analysis, statistical computing, data science, and applied statistics at both undergraduate and graduate levels.
+I am also happy to teach introductory level statistics courses as needed.
+For a precise description of my experiences teaching these courses, please refer to the teaching section of my CV: \href{https://jeswheel.github.io/texDocs/cv.pdf}{jeswheel.github.io/texDocs/cv.pdf}.
+% In conclusion, my teaching philosophy revolves around creating a dynamic and inclusive learning environment that caters to the diverse needs of students.
+% Through the integration of real-world examples, adaptive teaching methods, thoughtfully designed assignments, project-based learning, and the judicious use of generative AI, I aim to foster a deep and meaningful understanding of statistics among all my students.
 
 \bibliography{myWorks.bib,otherWorks.bib}
 \bibliographystyle{ieeetr}
