updated job documents

--- a/texDocs/cv.tex
+++ b/texDocs/cv.tex
@@ -142,8 +142,8 @@ Graduated as valedictorian of the College of Science, class of 2020
 \begin{interests}
     \item Time Series Analysis
     \item Mechanistic Models
-    \item Computational Statistics
     \item Infectious Disease Modeling
+    \item Modeling Dynamic Ecological Systems
     \item Reproducibility and Transparency in Statistics
 
 \end{interests}
@@ -234,6 +234,8 @@ Graduated as valedictorian of the College of Science, class of 2020
 \vspace{2mm}
 \noindent\hspace{5mm}\textbf{Rackham Merit Fellowship}, University of Michigan \hfill {\textit{2020--2025}}
 
+\hspace{5mm}{\it Award amount: Three years of PhD student funding.}
+
 \vspace{2mm}
 \noindent\hspace{5mm}\textbf{Valedictorian}, USU College of Science \hfill {\textit{2020}}
 
@@ -292,7 +294,7 @@ Graduated as valedictorian of the College of Science, class of 2020
 \noindent \textbf{Committee Chair} \hfill {\it 2023--Present}
 
 \vspace{2mm}
-\noindent \textbf{Peer Reviews}: PLOS Computation Biology, Nature Communications, Rapid Reviews Infectious Diseases
+\noindent \textbf{Peer Reviews}: PLOS Computation Biology, Nature Communications, Rapid Reviews Infectious Diseases, Bulletin of Mathematical Biology
 
 \vspace{2mm}
 \noindent \textbf{President, USU Data Science Club} \hfill  {\textit{2019--2020}}
@@ -302,7 +304,7 @@ Graduated as valedictorian of the College of Science, class of 2020
 \noindent Author and maintainer for the R package \textbf{arima2}, available on CRAN. As of October 1, 2024, this package has been downloaded more times than $79.7\%$ of all packages on CRAN since it was first published (October 5, 2023).
 
 \vspace{2mm}
-\noindent Primary maintainer of the R package \textbf{panelPomp}, available on CRAN.
+\noindent Primary contributor and current maintainer of the R package \textbf{panelPomp}, available on CRAN.
 
 \vspace{2mm}
 \noindent Core developer of the Python package \textbf{pypomp}, available on PyPI.
