--- a/texDocs/teachingStatement.tex
+++ b/texDocs/teachingStatement.tex
@@ -64,10 +64,11 @@ One such example is my utilization of the R package \texttt{learnr}.
 I have incorporated this tool into the labs of an undergraduate course on statistical computing at the University of Michigan.
 \texttt{learnr} converts any R Markdown file into an interactive tutorial, fostering a learning environment that encourages individual exploration of course topics.
 This method allows students to engage deeply with the material, with the added benefit of receiving targeted hints and support from the instructor when needed.
+Although I find \texttt{learnr} to be a valuable tool, my primary strength lies in my commitment to continuously learn and adopt new classroom technologies and teaching strategies that will benefit student learning.
 
 Generative AI is another emerging technology that offers both opportunities and challenges in teaching statistics.
 These tools are transforming how students engage with and understand complex concepts, thereby requiring instructors to adapt accordingly.
-Rather than treating AI as a hinderance to education, it is important to teach students how to use these tools responsibly and effectively in both research and learning contexts.
+Rather than treating AI as a hindrance to education, it is important to teach students how to use these tools responsibly and effectively in both research and learning contexts.
 In the master's level time series analysis course I instructed at the University of Michigan, students were allowed to use ChatGPT provided that they could demonstrate their engagement beyond simply copying answers.
 They were required to explain their learning process and how they applied their knowledge, thereby encouraging active and thoughtful interaction with the material.
 While AI tools can be beneficial, it is crucial for educators to evolve their teaching methods so that students can leverage new technology to enhance their learning experience rather than be hindered by it.
@@ -75,8 +76,8 @@ While AI tools can be beneficial, it is crucial for educators to evolve their te
 
 I have a wide range of teaching interests supported by my interest in learning a wide variety of statistical topics.
 My primary interests include courses closely related to my teaching experience and research interests, including: time series analysis, statistical computing, data science, and applied statistics at both undergraduate and graduate levels.
-I am also happy to teach introductory level statistics courses as needed.
-For a precise description of my experiences teaching these courses, please refer to the teaching section of my CV: \href{https://jeswheel.github.io/texDocs/cv.pdf}{jeswheel.github.io/texDocs/cv.pdf}.
+I am also happy to teach other statistics courses as needed.
+For a precise description of my teaching experiences, please refer to the teaching section of my CV: \href{https://jeswheel.github.io/texDocs/cv.pdf}{jeswheel.github.io/texDocs/cv.pdf}.
 % In conclusion, my teaching philosophy revolves around creating a dynamic and inclusive learning environment that caters to the diverse needs of students.
 % Through the integration of real-world examples, adaptive teaching methods, thoughtfully designed assignments, project-based learning, and the judicious use of generative AI, I aim to foster a deep and meaningful understanding of statistics among all my students.
 
