--- a/texDocs/DEIstatement.tex
+++ b/texDocs/DEIstatement.tex
@@ -21,7 +21,7 @@
 %\begin{center}
 %\hfill
 \begin{center}
-{\Large {\bf Commitment to Justic, Equity, Diversity, and Inclusion}}
+{\Large {\bf Commitment to Diversity, Equity, and Inclusion}}
 
 \vspace{2mm}
 
@@ -34,14 +34,25 @@
 
 \vspace{4mm}
 
-
-I aspire to be a researcher and educator who supports, promotes, and defends diversity in all its forms.
+\noindent I aspire to be a researcher and educator who supports, promotes, and defends diversity in all its forms.
 This aspiration is driven both by a desire to be equitable and inclusive of all people, and by the understanding that diversity is an effective driver of innovation.
 Without diversity of thoughts, opinions, and backgrounds, higher education would be destined to fail its purpose of advancing scientific discovery.
-
-The primary reason I have chosen to pursue a career in academia is my strong desire to positively influence society.
-However, I am aware that my contributions in academia---whether through research, teaching, or service---will only have a truly beneficial impact if they are inclusive and considerate of all groups within our society.
+Furthermore, I am aware that my contributions in academia---whether through research, teaching, or service---will only have a truly beneficial impact if they are inclusive and considerate of all groups within our society.
 As such, I am committed to fostering an inclusive and diverse environment in each of my teaching, research, and service roles.
+
+% The primary reason I have chosen to pursue a career in academia is my strong desire to positively influence society.
+% However, I am aware that my contributions in academia---whether through research, teaching, or service---will only have a truly beneficial impact if they are inclusive and considerate of all groups within our society.
+% As such, I am committed to fostering an inclusive and diverse environment in each of my teaching, research, and service roles.
+
+I acknowledge that I do not fully understand all of the challenges that members of underrepresented groups face within and outside of academia.
+Therefore, I am dedicated to continuous learning and growth in order to become a more effective ally and advocate for these communities.
+As part of my commitment to fostering an inclusive and diverse academic environment, I am currently enrolled in the University of Michigan's Professional Development in Diversity, Equity, and Inclusion Certificate program, which I will complete by December 2024.
+I am confident that this program will profoundly enhance my ability to promote diversity, equity, and inclusion in all aspects of my career.
+By equipping myself with the necessary knowledge and skills, I aspire to make a lasting, positive impact on the academic community and beyond.
+
+Among the most effective ways to build an environment centered on diversity, equity, and inclusion is by developing a community where open discourse and collaboration are welcome.
+In my current department, I actively contribute to this goal through my participation in the graduate student council.
+Although my specific role on the council is the computing chair, the entire council meets regularly to discuss the overall culture of the department, aiming to make the statistics department a place where students feel welcomed and can thrive. I enjoy participating in these conversations and look forward to finding other ways to encourage open discourse on these important topics.
 
 % Fostering inclusivity begins with understanding each student on a personal level and being flexible in my teaching approach.
 % By recognizing the diverse strengths and backgrounds of my students and adapting my teaching methods accordingly, I can effectively deliver course material to benefit the greatest number of students.
@@ -58,23 +69,24 @@ My hands-on experience as a graduate student instructor in a lab section allowed
 Helping students feel seen and heard empowers them to set and attain personal and academic goals.
 
 My approach to mentoring, particularly towards underrepresented groups, has been shaped by various experiences I have had as a PhD student.
-One relevant example is my involvement as a tutor to master's level students in the Rackham Merit Fellowship program, which supports diversity and inclusivity in graduate studies at the University of Michigan.
+One relevant example is my involvement as both a participant and tutor in the Rackham Merit Fellowship program, which supports diversity and inclusivity in graduate studies at the University of Michigan.
+After having benefited from the mentorship from other students in this program, I served as a tutor to master's level students in various statistics courses.
 Additionally, I have had the opportunity to mentor undergraduate and master's students from diverse backgrounds on their research projects.
 Through these experiences, I have learned the importance of attentive listening to address the specific needs of those I mentor.
 This includes paying attention to both verbal and nonverbal communication, which enables me to create an inclusive mentoring environment where students feel valued and supported.
 
-I further intend to prioritize diversity, equity, and inclusion in my own research.
+I intend to prioritize diversity, equity, and inclusion in my own research.
 Recognizing the importance of diversity of thought in scientific research, I actively seek out collaborations that offer perspectives distinct from my own.
 One of my primary application areas is the modeling of infectious diseases.
 Working in an area with potential applications to public health, I understand the importance of considering how my research may impact marginalized groups within our society.
 I believe that our efforts in this field have the potential to contribute to more equitable health solutions and policies, creating a positive impact that extends beyond academia and benefits diverse communities around the world.
-To achieve this, I am commited to engage in open discussions with stakeholders to understand how scientific recommendations based on research findings may affect their communities.
+To achieve this, I am committed to engage in open discussions with stakeholders to understand how scientific recommendations based on research findings may affect their communities.
 
 
 % I am committed to using and building upon open-source tools to ensure that my research findings and methodologies are accessible to everyone, not just those with access to proprietary software.
 % By making my work open-source, I aim to democratize research and empower a broader community of scientists, public health officials, and policymakers to engage with and benefit from my findings.
 
-% Promoting diverse collaborations is another cornerstone of my approach to DEI in research. I actively seek out partnerships with researchers from various disciplines, institutions, and backgrounds. This not only enriches the research process with a multitude of perspectives but also helps in tackling complex public health issues in a more holistic and inclusive manner. I am particularly focused on collaborating with researchers and institutions in underrepresented and underserved communities to ensure that the benefits of my work extend to all segments of society.
+% Promoting diverse collaborations is another cornerstone of my approach to DEI in research. I actively seek out partnerships with researchers from various disciplines, institutions, and backgrounds. This not only enriches the research process with a multitude of perspectives but also helps in tackling complex public health issues in a more holistic and inclusive manner. I am particularly focused on collaborating with researchers and institutions in underrepresented and under-served communities to ensure that the benefits of my work extend to all segments of society.
 
 % Throughout my life, I have benefited from various forms of privilege, and I have made a personal commitment to leveraging these to support and uplift those without the same privileges.
 % I understand that I have the potential to use my education and life experiences to create meaningful, positive changes both within and outside of academia.
@@ -82,11 +94,6 @@ To achieve this, I am commited to engage in open discussions with stakeholders t
 % This experience has introduced me to some of the challenges faced by such communities and has driven my desire to represent and serve them effectively in my academic career.
 % I seek to learn how to best represent and advocate for my community within the academic sphere and how to foster an inclusive environment that embraces diversity in all its forms.
 
-I acknowledge that I do not fully understand all of the challenges that members of underrepresented groups face within and outside of academia.
-Therefore, I am dedicated to continuous learning and growth in order to become a more effective ally and advocate for these communities.
-As part of my commitment to fostering an inclusive and diverse academic environment, I am currently enrolled in the University of Michigan's Professional Development in Diversity, Equity, and Inclusion Certificate program, which I will complete by December 2024.
-I am confident that this program will profoundly enhance my ability to promote diversity, equity, and inclusion in all aspects of my career.
-By equipping myself with the necessary knowledge and skills, I aspire to make a lasting, positive impact on the academic community and beyond.
 
 
 \end{document}
